--- a/css/idea.css
+++ b/css/idea.css
@@ -4,6 +4,11 @@ Intellij Idea-like styling (c) Vasily Polovnyov <vast@whiteants.net>
 
 */
 
+.fadedcode {
+    color: #999;
+    font-family: monospace;
+}
+
 pre code {
   display: block; 
   /*padding: 0.5em;*/
